--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,9 +1,9 @@
 /*============================================
 
-   Theme Name: Webze - ICO & Crypto Landing Page Template
+   Theme Name: Lexicrone - ICO & Crypto Landing Page Template
    Author :  ThemeAdapt
    Support: themeadapt@gmail.com
-   Description: Webze - ICO & Crypto Landing Page Template
+   Description: Lexicrone - ICO & Crypto Landing Page Template
    Version: 1.0
 
 ==============================================*/
@@ -2124,6 +2124,7 @@ textarea {
 .brand__item img {
   opacity: 0.5;
   cursor: pointer;
+  height: 70px;
 }
 .brand__item img:hover {
   opacity: 1;
@@ -2609,22 +2610,24 @@ textarea {
 }
 .work__img {
   position: absolute;
-  left: 50%;
-  top: 50%;
-  transform: translate(-50%, -50%);
+  height: 200px;
+  width: 100%;
+
   z-index: -1;
 }
 @media (max-width: 991.98px) {
   .work__img {
-    position: initial;
-    transform: translate(0);
-    text-align: center;
+    height: 200px;
+  width: 100%;
+
     margin-bottom: 50px;
   }
 }
 @media (max-width: 1199.98px) {
   .work__img img {
-    width: 400px;
+    
+  width: 100%;
+
   }
 }
 .work__shape {
@@ -3003,11 +3006,7 @@ textarea {
   margin-bottom: 40px;
 }
 .team__thumb img {
-  -webkit-border-radius: 50%;
-  -moz-border-radius: 50%;
-  -o-border-radius: 50%;
-  -ms-border-radius: 50%;
-  border-radius: 50%;
+  
 }
 .team__content span {
   font-weight: 600;
@@ -3101,6 +3100,7 @@ textarea {
 }
 .blog__post-thumb img {
   width: 100%;
+  height: 500px;
 }
 .blog__post-content .date {
   display: block;
